# listx_blog

./: .agignore  .gitignore  CNAME  LICENSE  Makefile  README.md  README.org  about.md  about.org  art.md  blog.cabal  blog.hs  build.sh  code.md  etc.org  favicon.xcf  index.html  misc.js  papers.md  shell.nix  stack.yaml  sync.sh
Blog/: Custom.hs
code/: .flake8  .pylintrc  arch-setup.sh  config.nix  emacs-unix-filter.el  find-80-cols.sh  switch_audio.sh
code/2016-09-24-parking-lot-problem-revisited/: array1.hs  array2.hs  divideAndConquer.hs  naive.hs
code/2017-04-02-calling-c-from-haskell/: build.sh
code/2017-04-02-calling-c-from-haskell/c/: gcd.c  gcd.h
code/2017-04-02-calling-c-from-haskell/hs/: GCD.hs  ffi.hs
code/2017-04-14-computing-fibonacci-numbers/: fibonacci-doubling-iter.py  fibonacci-doubling.py
code/2021-03-15-bresenham-circle-drawing-algorithm/: bresenham.py  gen_golden.py  lib.py  naive.py
code/opengl/: matrices.hs  triangle.hs
code/rng/: listing-1.c  listing-2.c  listing-3.c  listing-4.c  mwc-seed.hs  pcg-style.c
code/toy/: binary-search-pseudo-0.txt  binary-search-pseudo-1.txt  binary-search.c  binary-search.hs  binary-search.rb  parking-lot.hs  parking-space.hs  parking-space.rb  parking-space2.hs  parking-spaces.hs  parking-spaces.rb  rpn.hs  rpn.rb
code/toy/game-button-seq/: GameButtonSeq.hs  hash_ver.rb  interview_ver.hs  test_hash_ver.hs  test_hash_ver.rb
code/toy/srm485-afraid-of-even/: Unmutate.hs  pseudocode.txt  test-unmutate.hs  test-unmutate.rb  unmutate.rb
code/toy/text-freq/: TextFreq.hs  analyze.hs  analyze.rb  text_freq.rb
css/: base.hs  base.sass  syntax.css
file/: 0001-brother-fixed-PPD-margins.patch  git.org
file/git-archaeology/: 0001-fix-build-warnings-and-errors.patch  0002-explain-the-update-cache-binary.patch  0003-explain-cache_entry_size-macro.patch  0004-start-reading-add_file_to_cache.patch  0005-understand-up-to-index_fd.patch  0006-better-understananding-of-how-the-cache-works.patch  0007-rename-.dircache-to-.git.patch  0008-add-.gitignore.patch  0009-add-STUDY_NOTES.md.patch
nix/: sources.json
post/: 2013-01-11-using-hakyll.md  2013-01-11-using-hakyll.org  2013-01-12-total-bithead.md  2013-01-12-total-bithead.org  2013-01-21-programming-life-skill.org  2013-03-10-installing-arch-and-enabling-system-encryption.md  2013-03-10-installing-arch-and-enabling-system-encryption.org  2013-04-23-mwc-high-quality-fixed-seeds.md  2013-04-23-mwc-high-quality-fixed-seeds.org  2013-04-30-emacs-unix-filter.md  2013-04-30-emacs-unix-filter.org  2013-05-31-becoming-a-programmer.md  2013-05-31-becoming-a-programmer.org  2013-06-06-realforce-104ug-hi-pro.md  2013-06-06-realforce-104ug-hi-pro.org  2013-06-13-leopold-cherry-brown-mx.md  2013-06-13-leopold-cherry-brown-mx.org  2013-07-12-generating-random-numbers-without-modulo-bias.md  2013-07-12-generating-random-numbers-without-modulo-bias.org  2013-08-07-brother-mfc-9840cdw-linux-setup.md  2013-08-07-brother-mfc-9840cdw-linux-setup.org  2013-08-21-functors-for-newbies.md  2013-08-21-functors-for-newbies.org  2013-09-07-development-best-practices.md  2013-09-07-development-best-practices.org  2013-11-13-filco-majestouch-2-ninja-cherry-brown-mx.md  2013-11-13-filco-majestouch-2-ninja-cherry-brown-mx.org  2013-11-19-akg-k702.md  2013-11-19-akg-k702.org  2013-12-09-brother-mfc-9840cdw-linux-setup-2.md  2013-12-09-brother-mfc-9840cdw-linux-setup-2.org  20130111-using-hakyll.md  20130112-total-bithead.md  20130121-programming-life-skill.md  2014-01-06-using-cblrepo-in-arch-linux.md  2014-01-06-using-cblrepo-in-arch-linux.org  2014-01-24-cabal2pkgbuild.md  2014-01-24-cabal2pkgbuild.org  2014-01-24-cblrepo2pkgbuild.md  2014-03-15-opengl-from-haskell.md  (+59 more)
post/template/: default.md  default.org
rust-js/: .gitignore  Cargo.toml  Makefile  README.org
rust-js/src/: lib.rs
rust-js/tests/: golden.rs  test_bresenham.sh
template/: archive.html  default.html  index.html  mathjax.html  post-item.html  post.html
