name: blog
version: 0.1.0.0
synopsis: Personal website of Linus Arver
description: Personal website of Linus Arver
homepage: listx.github.io
license: AllRightsReserved
license-file: LICENSE
author: Linus Arver
maintainer: linusarver@gmail.com
copyright: (C) 2013-2014 Linus Arver
category: Web
build-type: Simple
-- extra-source-files:
cabal-version: >=1.10

executable blog
  main-is: blog.hs
  ghc-options: -Wall
  -- other-modules:
  other-extensions: OverloadedStrings
  build-depends:
      base >=4.7 && <4.8
    , containers >= 0.5.5.1 && < 0.6
    , hakyll >= 4.5
    , pandoc >= 1.12
    , clay >= 0.8.0.1
  -- hs-source-dirs:
  default-language: Haskell2010

executable base
  main-is: css/base.hs
  ghc-options: -Wall
  -- other-modules:
  other-extensions: OverloadedStrings
  build-depends:
      base >= 4.7 && < 4.8
    , text >= 1.1.1.3 && < 1.2
    , clay >= 0.8.0.1
  -- hs-source-dirs:
  default-language: Haskell2010
