name: blog
version: 0.1.0.0
synopsis: Personal website of Linus Arver
description: Personal website of Linus Arver
homepage: listx.github.io
license: AllRightsReserved
license-file: LICENSE
author: Linus Arver
maintainer: linusarver@gmail.com
copyright: (C) 2013-2015 Linus Arver
category: Web
build-type: Simple
-- extra-source-files:
cabal-version: >=1.10

executable blog
  main-is: blog.hs
  ghc-options: -Wall -Werror
  -- other-modules:
  other-extensions: OverloadedStrings
  build-depends:
      base >=4.7
    , containers >= 0.5.5.1
    , hakyll >= 4.5
    , network-uri >= 2.6.0.1
    , pandoc >= 1.12
    , clay >= 0.8.0.1
    , filepath >= 1.3.0.2
    , pandoc-types >= 1.12.4.1
  -- hs-source-dirs:
  default-language: Haskell2010

executable base
  main-is: css/base.hs
  ghc-options: -Wall -Werror
  -- other-modules:
  other-extensions: OverloadedStrings
  build-depends:
      base >= 4.7
    , text >= 1.1.1.3
    , clay >= 0.8.0.1
  -- hs-source-dirs:
  default-language: Haskell2010

-- Source code examples
executable test_hash_ver
  main-is: test_hash_ver.hs
  ghc-options: -Wall -Werror
  other-modules: GameButtonSeq
  build-depends:
      base >=4.7 && <4.8
    , containers >=0.5 && <0.6
    , tasty >=0.10 && <0.11
    , tasty-hunit >=0.9 && <0.10
    , tasty-quickcheck >=0.8 && <0.9
  hs-source-dirs: code/toy/game-button-seq
  default-language: Haskell2010
