name: blog
version: 0.1.0.0
synopsis: Personal website of Linus Arver
description: Personal website of Linus Arver
homepage: listx.github.io
license: AllRightsReserved
license-file: LICENSE
author: Linus Arver
maintainer: linusarver@gmail.com
copyright: (C) 2013-2016 Linus Arver
category: Web
build-type: Simple
-- extra-source-files:
cabal-version: >=1.10

executable blog
  main-is: blog.hs
  ghc-options: -Wall -Werror -fno-warn-tabs
  -- other-modules:
  other-extensions: OverloadedStrings
  build-depends:
      base >=4.7
    , containers >= 0.5.5.1
    , hakyll >= 4.8
    , network-uri >= 2.6.0.1
    , pandoc >= 1.12
    , clay >= 0.8.0.1
    , filepath >= 1.3.0.2
    , pandoc-types >= 1.12.4.1
    , time >= 1.6.0.1
  -- hs-source-dirs:
  default-language: Haskell2010

executable base
  main-is: css/base.hs
  ghc-options: -Wall -Werror -fno-warn-tabs
  -- other-modules:
  other-extensions: OverloadedStrings
  build-depends:
      base >= 4.7
    , text >= 1.1.1.3
    , clay >= 0.8.0.1
  -- hs-source-dirs:
  default-language: Haskell2010

-- Source code examples
executable test_game_button_seq
  main-is: test_hash_ver.hs
  ghc-options: -Wall -Werror -fno-warn-tabs
  other-modules: GameButtonSeq
  build-depends:
      base >=4.7
    , containers >=0.5
    , tasty >=0.11
    , tasty-hunit >=0.9
    , tasty-quickcheck >=0.8
  hs-source-dirs: code/toy/game-button-seq
  default-language: Haskell2010

executable analyze
  main-is: analyze.hs
  ghc-options: -Wall -Werror -O2 -fno-warn-tabs
  other-modules: TextFreq
  build-depends:
      base >=4.7
    , array >= 0.5
    , containers >= 0.5.5.1
    , text >= 1.2
  hs-source-dirs: code/toy/text-freq
  default-language: Haskell2010

executable test_srm485_afraid_of_even
  main-is: test-unmutate.hs
  ghc-options: -Wall -fno-warn-tabs
  other-modules: Unmutate
  build-depends:
      base >=4.7
    , containers >=0.5
    , tasty >=0.11
    , tasty-hunit >=0.9
    , tasty-quickcheck >=0.8
  hs-source-dirs: code/toy/srm485-afraid-of-even
  default-language: Haskell2010
